# suid

./: .coveragerc  .gitignore  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml
suid/: __init__.py
tests/: test_suid.py
